# Add hello-world
add_executable(ch1-hw hw.c)

# Add pid
add_executable(ch1-pid pid.c)

# Add simple-cat
add_executable(ch1-simple-cat simple-cat.c)

# Add simple-cat2
add_executable(ch1-simple-cat2 simple-cat2.c)

# Add simple-ls
add_executable(ch1-simple-ls simple-ls.c)

# Add simple-shell
add_executable(ch1-simple-shell simple-shell.c)

# Add simple-shell
add_executable(ch1-simple-shell2 simple-shell2.c)

# Add welcome
add_executable(ch1-welcome welcome.c)
